@@ -1,5 +1,5 @@
-compat.syntaxVersion=1
-compat.version=1
+compat.syntaxVersion=2
+compat.version=2
 compat.name=BSD
 compat.description=parser and formatter for compatibility with hash tools on macOS and BSD (e.g. md5)
 compat.authors=Johann N. Loefflmann <https://johann.loefflmann.net>
@@ -16,3 +16,4 @@ parser.regexp.nibbles=64
 
 formatter.format=#ALGONAME{uppercase} (#FILENAME) = #CHECKSUM{hex}
 formatter.hash.encoding=hex
+formatter.lineSeparator=\n
