@@ -1,4 +1,4 @@
-compat.syntaxVersion=1
+compat.syntaxVersion=2
 compat.version=1
 compat.name=FCIV
 compat.description=parser and formatter definitions for compatibility with the FCIV tool on Microsoft Windows
