@@ -1,5 +1,5 @@
-compat.syntaxVersion=1
-compat.version=1
+compat.syntaxVersion=2
+compat.version=2
 compat.name=GNU/Linux
 compat.description=parser and formatter definitions for compatibility with hash tools such as md5sum, sha1sum, b2sum, etc. on GNU/Linux
 compat.authors=Johann N. Loefflmann <https://johann.loefflmann.net>
@@ -17,3 +17,4 @@ parser.regexp.nibbles=64
 formatter.format=#CHECKSUM{hex}  #FILENAME
 formatter.hash.encoding=hex
 formatter.stdinName=-
+formatter.lineSeparator=\n
