@@ -1,5 +1,5 @@
-compat.syntaxVersion=1
-compat.version=1
+compat.syntaxVersion=2
+compat.version=2
 compat.name=OpenSSL
 compat.description=parser and formatter for compatibility with OpenSSL
 compat.authors=Johann N. Loefflmann <https://johann.loefflmann.net>
@@ -17,3 +17,4 @@ parser.regexp.nibbles=64
 formatter.format=#ALGONAME{uppercase}(#FILENAME)= #HASH{hex}
 formatter.hash.encoding=hex
 formatter.stdinName=stdin
+formatter.lineSeparator=\n
