@@ -1,4 +1,4 @@
-compat.syntaxVersion=1
+compat.syntaxVersion=2
 compat.version=1
 compat.name=SFV
 compat.description=parser and formatter definitions for the SFV format
